updates from hipster app